--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # ignor WebStorm's files
-/idea
+.idea
 
 # dependencies
 /node_modules
